--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -34,7 +34,7 @@ The following should also be done phase:
 ### Validation phase milestones
 * The submission for publication of a paper in the ecosystem domain presenting the scenarios run in the virtual lab.
 * The lab becoming publicly available.
-* Potentially also the submission for publication of a technical paper focusing on the infrastructure part of the virtual research environment.
+* Potentially, besides a domain paper, the submission for publication of a technical paper focusing on the infrastructure part of the virtual research environment.
 
 ### Validation phase responsibilities
 The following roles should be assigned during the validation phase:
@@ -49,9 +49,11 @@ The following roles should be assigned during the validation phase:
 * VRE DevOps engineer: <Responsibilities.L2DevOps/>
 
 ### Exit condition
-The virtual lab transitions to workshop use, once the validation has been done and a scientific paper is ready for publication.
+The virtual lab transitions to workshop use, once validation of the lab by doing scientific experiments has been done and a scientific paper is ready for publication.
+
 It is important to find out who would be potential silver users of the virtual lab. In case no match between the virtual lab
 and potential silver users can be found, the virtual lab should be archived.
+
 To advance to workshop use, all of the following boxes should be checked, in addition to the criteria for the initial proposal, and co-development:
 
 * User community
