--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -15,8 +15,12 @@ The following should be done during workshop use:
 
 * Documentation
   * Gather user feedback on the documentation.
+  * Continuously improve the documentation.
 * Codebase
   * Find out if the architecture of the virtual lab is understandable and maintainable.
+  * Continuously improve the codebase.
+* Deployment
+    * The virtual lab should be published on MyLifeWatch.
 
 ### Workshop use milestone
 In this phase at least one workshop should be given to a group of 10 to 25 potential users.
@@ -34,10 +38,15 @@ The following responsibilities should be assigned during workshop use:
 * Virtual lab coordinator: <Responsibilities.L3Coordinator/>
 
 ### Exit conditions
-The virtual lab becomes an operational service if scientists taking part in the workshops, trainings, and hackathons
+The virtual lab becomes an operational service, if scientists taking part in the workshops, trainings, and hackathons
  find that they can use the virtual lab in their research, and the training material and guidelines are ready for normal (ivory) users to use.
+
+Virtual labs do not need to reach operational service to be successful. A lab could also be the perfect fit for the scientific
+scenario of the golden users, but not have any other users who can apply it in their own research.
+It is important to weigh the scientific benefits of advancing a virtual lab to the next readiness level to the effort and cost involved in doing that.
 In case none of the silver users keeps using the virtual labs after the workshops, the virtual lab should be archived.
-All previous criteria apply in addition to the following:
+
+To evolve to an operational service, all previous criteria apply in addition to the following:
 
 * Community
   * [ ] There is a scientific steering board who are willing to take care of the scientific
