--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -12,7 +12,8 @@ In this phase the virtual lab has been industrialized and is provisioned on the 
 
 The following should be done during operational service:
 
-* Expand and adapt the virtual lab where useful or necessary.
+* Expand and adapt the virtual lab where useful.
+* Keep up to date with new versions of dependencies.
 * Make the containerized cells and workflow interoperable with other systems where use cases for the interoperability between NaaVRE and another system arise.
 
 ### Operational service milestones
