--- a/docs/readiness_levels/Virtual_lab_roles/Core_developer.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Core_developer.mdx
@@ -4,6 +4,8 @@ title: Core developer
 ---
 import * as Responsibilities from  './../Responsibilities.js';
 
+Core developers create the content of the new virtual lab, being steered by the golden users.
+
 The core developers have the following responsibilities per level:
 - L1: <Responsibilities.L1CoreDeveloper/>
 - L2: <Responsibilities.L2CoreDeveloper/>
