--- a/docs/readiness_levels/Virtual_lab_roles/Golden_user.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Golden_user.mdx
@@ -9,3 +9,4 @@ Golden users have the following responsibilities per level:
 - L1: <Responsibilities.L1GoldenUser/>
 - L2: <Responsibilities.L2GoldenUser/>
 - L3: <Responsibilities.L3GoldenUser/>
+- L4: <Responsibilities.L4GoldenUser/>
