--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -5,20 +5,20 @@ title: L0 - initial proposal
 import * as Responsibilities from './Responsibilities.js';
 
 ### Start situation
-A new virtual lab starts with potential (golden) users who are willing to use NaaVRE to conduct research.
+A new virtual lab starts with potential (golden) users who are willing to use NaaVRE to conduct their research.
 They will be selected, or reached out. The (golden) user will propose a virtual lab based on a scientific story
 and technical starting point.
-If a NaaVRE virtual lab seems the best platform to conduct the research,
-the potential (golden) users and NaaVRE DevOps team work out the idea further, recruit a team of core developers,
+If a NaaVRE virtual lab seems a suitable platform to conduct the research,
+the potential (golden) users, the community manager, and NaaVRE DevOps team work out the idea further, recruit a team of core developers,
 establish ambitions, and make a timeline for the virtual lab.
 
 ### During the initial proposal phase
 The following things should be done to work out the initial proposal to a concrete virtual lab:
 
 * Feasibility
-  * Check if the idea research activity can be done in NaaVRE.
+  * Check if the research activity can be done in NaaVRE.
 * Team recruitment
-  * Find a team of core developers to build the virtual lab.
+  * Find and hire a team of core developers to build the virtual lab.
 * Plan
   * Write a development plan for the virtual lab. What scientific scenario will be investigated and what is needed to enable that?
   * Make a timeline for the co-development, validation of the virtual lab and development of training material.
@@ -27,9 +27,9 @@ The following things should be done to work out the initial proposal to a concre
 assuming this is compatible with the other packages and software you use in the virtual lab. If the Apache License 2.0 is incompatible with software or libraries used,
 you can pick another license. We recommend having a look at https://choosealicense.com/.
 * Codebase
-  * Create a new virtual lab.
+  * The virtual lab coordinator will create a new virtual lab.
 * Version control
-  * Store of the codebase on a repository with version control (e.g. git).
+  * Store the codebase on a repository with version control (e.g. git).
 * Documentation
   * Pick a nice name for your virtual lab. Make sure the name won't be mixed up with other virtual labs.
 
