#271 Elaborate core developer responsibilities

--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -31,5 +31,6 @@ The following responsibilities should be assigned when the virtual lab is an ope
 * Scientific steering board: <Responsibilities.L4SteeringBoard/>
 * User supporter: <Responsibilities.L4UserSupporter/>
 * Community supporter: <Responsibilities.L4CommunitySupporter/>
+* Core developer: <Responsibilities.L4CoreDeveloper/>
 * Virtual lab coordinator: <Responsibilities.L4Coordinator/>
 * Infrastructure supporter: <Responsibilities.L4InfrastructureSupporter/>
