--- a/docs/readiness_levels/Virtual_lab_roles/Core_developer.mdx
+++ b/docs/readiness_levels/Virtual_lab_roles/Core_developer.mdx
@@ -9,3 +9,4 @@ Core developers create the content of the new virtual lab, being steered by the 
 The core developers have the following responsibilities per level:
 - L1: <Responsibilities.L1CoreDeveloper/>
 - L2: <Responsibilities.L2CoreDeveloper/>
+- L3&4: <Responsibilities.L3CoreDeveloper/>
