--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -34,6 +34,7 @@ The following responsibilities should be assigned during workshop use:
 * Community supporter: <Responsibilities.L3CommunitySupporter/>
 * Virtual lab trainer: <Responsibilities.L3Trainer/>
 * User supporter: <Responsibilities.L3UserSupporter/>
+* Core developer: <Responsibilities.L3CoreDeveloper/>
 * Infrastructure supporter: <Responsibilities.L3InfrastructureSupporter/>
 * Virtual lab coordinator: <Responsibilities.L3Coordinator/>
 
