#271 Use title field

--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -1,8 +1,11 @@
-# Readiness level framework for co-development of virtual labs on the NaaVRE platform
+---
+sidebar_position: 1
+title: Readiness level framework for co-development of virtual labs on the NaaVRE platform
+---
 
 import Downward_arrow from './svgs/Downward_arrow.js';
 
-Version 0.0.2
+*Version 0.0.2*
 
 The NaaVRE platform facilitates data- and computing-centric research activities by enabling scientists to create customizable virtual labs for specific scientific purposes.
 This is achieved through a collaborative co-development approach, bringing together domain specialists, computational scientists, data scientists, and development and operations engineers.
