--- a/docs/readiness_levels/RAVRE/development_log.mdx
+++ b/docs/readiness_levels/RAVRE/development_log.mdx
@@ -3,9 +3,9 @@ sidebar_position: 1
 title: "RAVRE development log"
 ---
 This page links to the logs showing what has been done in RAVRE per readiness level. Additionally you can find an overview of assigned roles.
-For more information on how virtual labs are organised, checkout the [NaaVRE readiness level framework](/docs/readiness_levels).
+For more information on how virtual labs are organised, checkout the [NaaVRE readiness level framework](../..).
 
-- [L0 - conceptual proposal](/docs/readiness_levels/RAVRE/L0_conceptual_proposal)
-- [L1 - co-development](/docs/readiness_levels/RAVRE/L1_co-development)
-- [L2 - validation phase](/docs/readiness_levels/RAVRE/L2_validation_phase)
-- [Roles](/docs/readiness_levels/RAVRE/roles)
+- [L0 - conceptual proposal](../L0_conceptual_proposal)
+- [L1 - co-development](../L1_co-development)
+- [L2 - validation phase](../L2_validation_phase)
+- [Roles](../roles)
